--- a/webpage/webpage05/css/style05.css
+++ b/webpage/webpage05/css/style05.css
@@ -66,11 +66,17 @@
     font-size: 20px ;
     color: rgb(255, 171, 115) ;
     text-decoration: none ;
-    margin-left: 12px ;
+    margin-top: 250px ;
+  	margin-bottom: 30px ;
     transition: .5s;
+  align-items: center ;
 }
 
 .home-sci a:hover {
     background:rgb(255, 171, 115) ;
     color: white ;
+}
+
+.contact-text {
+	text-align:center ;
 }
